# Course_work_OOP

./: Python.json  README.md  class_Eror.py  classes.py  hh_ru.py  main.py  pyproject.toml  superJob.py  vacancy.py
