[tool.poetry]
name = "course_homework_OOP"
version = "0.1.0"
description = ""
authors = ["German <germanstarinenko@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.10"
isodate = "^0.6.1"
google-api-python-client = "^2.84.0"
hh = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
